--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/alex-bartleynees/natours-tutorial#readme",
   "devDependencies": {
     "live-server": "^1.2.1",
-    "node-sass": "^6.0.0"
+    "node-sass": "^6.0.0",
+    "prettier": "2.3.1"
   }
 }
